add navbar, initial menu and order component

--- a/food-order-webui/src/app/app.component.html
+++ b/food-order-webui/src/app/app.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar">
     <a routerLink="/" routerLinkActive="active">Home</a>
-    <a class="nav-link" routerLink="/restaurant" routerLinkActive="active">restaurant</a>
+    <a class="nav-link" routerLink="/restaurant/restaurant_id1" routerLinkActive="active">restaurant</a>
     <a class="nav-link" routerLink="/login" routerLinkActive="active">login</a>
     <a class="nav-link" routerLink="/signup" routerLinkActive="active">signup</a>
     <a class="nav-link" routerLink="/not-found" routerLinkActive="active">not-found</a>
 </nav>
+<app-header></app-header>
 <router-outlet></router-outlet>
