--- a/food-order-webui/src/app/signup/signup.component.html
+++ b/food-order-webui/src/app/signup/signup.component.html
@@ -1,23 +1,22 @@
 <div class="login-page">
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <img class="user-avatar" src="assets/images/logo.png" width="150px" />
             <h1>Sign up</h1>
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" class="form-control input-underline input-lg" id="" placeholder="Name">
+                        <input type="text" class="form-control input-underline input-lg" placeholder="Name">
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control input-underline input-lg" id="" placeholder="Email">
+                        <input type="text" class="form-control input-underline input-lg" placeholder="Email">
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                        <input type="password" class="form-control input-underline input-lg" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Repeat Password">
+                        <input type="password" class="form-control input-underline input-lg" placeholder="Repeat Password">
                     </div>
                 </div>
                 <a class="btn rounded-btn" (click)="onRegister()"> Register </a>&nbsp;
