--- a/food-order-webui/src/app/restaurant/restaurant.component.html
+++ b/food-order-webui/src/app/restaurant/restaurant.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-9 col-md-6 col-lg-8 col-xl-10 pnl_menu">
-      <app-menu></app-menu>
+      <app-menulist></app-menulist>
     </div>
     <div class="col-sm-3 col-md-6 col-lg-4 col-xl-2 pnl_order">
       <app-order></app-order>
